--- a/css/style.css
+++ b/css/style.css
@@ -210,11 +210,17 @@ label {
     font-size: 36px;
     line-height: 46px;
   }
+  body {
+    user-select: none;
+  }
 }
 @media screen and (max-width: 480px) {
   h2 {
     font-size: 30px;
     line-height: 38px;
+  }
+  body {
+    user-select: none;
   }
 }
 @media screen and (min-width: 361px) and (max-width: 400px) {
